k8s/apps/prometheus/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: prometheus
  labels:
    app: prometheus
  annotations:
    tailscale.com/proxy-class: "high-bandwidth"
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: prometheus
      port:
        number: 9090
  tls:
    - hosts:
        - prometheus.tail57bf10.ts.net
